--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,7 +69,14 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-67 Ubuntu gloss per-gloss banish"
+            "139-137 Ubuntu xtrace validate-spells pocket-dimension"
+            "139-138 Ubuntu xtrace validate-spells wizard-eyes"
+            "139-139 Ubuntu xtrace validate-spells spellbook-store"
+            "139-140 Ubuntu xtrace validate-spells format-duration"
+            "139-141 Ubuntu xtrace spell-levels 8"
+            "139-142 Ubuntu xtrace pocket-dimension"
+            "139-143 Ubuntu xtrace pocket gloss"
+            "139-144 Ubuntu xtrace banish 8"
           )
           
           # Total number of workflows we're monitoring
