--- a/.github/workflows/139-150-ubuntu-xtrace-attr-direct.yml
+++ b/.github/workflows/139-150-ubuntu-xtrace-attr-direct.yml
@@ -1,7 +1,7 @@
-name: 139-145 Ubuntu xtrace xattr smoke
+name: 139-150 Ubuntu xtrace attr direct
 
 on:
-  workflow_dispatch:
+  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,8 +11,8 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-xtrace-xattr-smoke:
-    name: 139-145 Ubuntu xtrace xattr smoke
+  ubuntu-xtrace-attr-direct:
+    name: 139-150 Ubuntu xtrace attr direct
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
@@ -34,7 +34,7 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run xattr smoke under xtrace
+      - name: Run attr command under xtrace
         run: |
           set +e
           ulimit -c unlimited || true
@@ -42,23 +42,14 @@ jobs:
             timeout 120 bash -lc '
               set -x
               . spells/.imps/sys/invoke-wizardry
-              tmp=$(mktemp "${TMPDIR:-/tmp}/wizardry-xattr.XXXXXX")
-              if command -v xattr >/dev/null 2>&1; then
-                xattr -w user.test value "$tmp"
-                xattr -p user.test "$tmp"
-                xattr -d user.test "$tmp" || :
-              elif command -v setfattr >/dev/null 2>&1 && command -v getfattr >/dev/null 2>&1; then
-                setfattr -n user.test -v value "$tmp"
-                getfattr -n user.test "$tmp"
-                setfattr -x user.test "$tmp" || :
-              elif command -v attr >/dev/null 2>&1; then
-                attr -s user.test -V value "$tmp"
-                attr -g user.test "$tmp"
-                attr -r user.test "$tmp" || :
-              else
-                printf "%s\n" "no xattr helper found" >&2
+              if ! command -v attr >/dev/null 2>&1; then
+                printf "%s\n" "attr command not found" >&2
                 exit 1
               fi
+              tmp=$(mktemp "${TMPDIR:-/tmp}/wizardry-xattr.XXXXXX")
+              attr -s user.test -V value "$tmp"
+              attr -g user.test "$tmp"
+              attr -r user.test "$tmp" || :
               rm -f "$tmp"
             '
             status=$?
@@ -66,32 +57,23 @@ jobs:
             bash -lc '
               set -x
               . spells/.imps/sys/invoke-wizardry
-              tmp=$(mktemp "${TMPDIR:-/tmp}/wizardry-xattr.XXXXXX")
-              if command -v xattr >/dev/null 2>&1; then
-                xattr -w user.test value "$tmp"
-                xattr -p user.test "$tmp"
-                xattr -d user.test "$tmp" || :
-              elif command -v setfattr >/dev/null 2>&1 && command -v getfattr >/dev/null 2>&1; then
-                setfattr -n user.test -v value "$tmp"
-                getfattr -n user.test "$tmp"
-                setfattr -x user.test "$tmp" || :
-              elif command -v attr >/dev/null 2>&1; then
-                attr -s user.test -V value "$tmp"
-                attr -g user.test "$tmp"
-                attr -r user.test "$tmp" || :
-              else
-                printf "%s\n" "no xattr helper found" >&2
+              if ! command -v attr >/dev/null 2>&1; then
+                printf "%s\n" "attr command not found" >&2
                 exit 1
               fi
+              tmp=$(mktemp "${TMPDIR:-/tmp}/wizardry-xattr.XXXXXX")
+              attr -s user.test -V value "$tmp"
+              attr -g user.test "$tmp"
+              attr -r user.test "$tmp" || :
               rm -f "$tmp"
             '
             status=$?
           fi
           if [ "$status" -eq 139 ]; then
-            printf '%s\n' "xtrace xattr smoke exited with code 139 (SIGSEGV)"
+            printf '%s\n' "xtrace attr direct exited with code 139 (SIGSEGV)"
             printf '%s\n' "Last 50 dmesg lines (if available):"
             dmesg | tail -n 50 || true
           elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "xtrace xattr smoke timed out after 120 seconds"
+            printf '%s\n' "xtrace attr direct timed out after 120 seconds"
           fi
           exit "$status"
