--- a/.github/workflows/139-159-ubuntu-xtrace-xattr-package-no-glosses.yml
+++ b/.github/workflows/139-159-ubuntu-xtrace-xattr-package-no-glosses.yml
@@ -1,7 +1,7 @@
 name: 139-159 Ubuntu xtrace xattr package no glosses
 
 on:
-  pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
