--- a/.github/workflows/139-160-ubuntu-xtrace-xattr-package-command-bypass.yml
+++ b/.github/workflows/139-160-ubuntu-xtrace-xattr-package-command-bypass.yml
@@ -1,7 +1,7 @@
 name: 139-160 Ubuntu xtrace xattr package command bypass
 
 on:
-  pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
