--- a/.github/workflows/139-161-ubuntu-xtrace-xattr-unset-function.yml
+++ b/.github/workflows/139-161-ubuntu-xtrace-xattr-unset-function.yml
@@ -1,7 +1,7 @@
-name: 139-158 Ubuntu xtrace xattr package after invoke
+name: 139-161 Ubuntu xtrace xattr unset function
 
 on:
-  workflow_dispatch:
+  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,8 +11,8 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-xtrace-xattr-package-after-invoke:
-    name: 139-158 Ubuntu xtrace xattr package after invoke
+  ubuntu-xtrace-xattr-unset-function:
+    name: 139-161 Ubuntu xtrace xattr unset function
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
@@ -34,7 +34,7 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run invoke-wizardry then xattr under xtrace
+      - name: Run invoke-wizardry then unset xattr function under xtrace
         run: |
           set +e
           ulimit -c unlimited || true
@@ -42,14 +42,16 @@ jobs:
             timeout 120 bash -lc '
               . spells/.imps/sys/invoke-wizardry
               set -x
-              if ! command -v xattr >/dev/null 2>&1; then
-                printf "%s\n" "xattr command not found" >&2
-                exit 1
+              type xattr || true
+              if command -v xattr >/dev/null 2>&1; then
+                if type xattr 2>/dev/null | grep -q "function"; then
+                  unset -f xattr
+                fi
               fi
               tmp=$(mktemp "${TMPDIR:-/tmp}/wizardry-xattr.XXXXXX")
-              xattr -w user.test value "$tmp"
-              xattr -p user.test "$tmp"
-              xattr -d user.test "$tmp" || :
+              command xattr -w user.test value "$tmp"
+              command xattr -p user.test "$tmp"
+              command xattr -d user.test "$tmp" || :
               rm -f "$tmp"
             '
             status=$?
@@ -57,23 +59,25 @@ jobs:
             bash -lc '
               . spells/.imps/sys/invoke-wizardry
               set -x
-              if ! command -v xattr >/dev/null 2>&1; then
-                printf "%s\n" "xattr command not found" >&2
-                exit 1
+              type xattr || true
+              if command -v xattr >/dev/null 2>&1; then
+                if type xattr 2>/dev/null | grep -q "function"; then
+                  unset -f xattr
+                fi
               fi
               tmp=$(mktemp "${TMPDIR:-/tmp}/wizardry-xattr.XXXXXX")
-              xattr -w user.test value "$tmp"
-              xattr -p user.test "$tmp"
-              xattr -d user.test "$tmp" || :
+              command xattr -w user.test value "$tmp"
+              command xattr -p user.test "$tmp"
+              command xattr -d user.test "$tmp" || :
               rm -f "$tmp"
             '
             status=$?
           fi
           if [ "$status" -eq 139 ]; then
-            printf '%s\n' "xtrace xattr package after invoke exited with code 139 (SIGSEGV)"
+            printf '%s\n' "xtrace xattr unset function exited with code 139 (SIGSEGV)"
             printf '%s\n' "Last 50 dmesg lines (if available):"
             dmesg | tail -n 50 || true
           elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "xtrace xattr package after invoke timed out after 120 seconds"
+            printf '%s\n' "xtrace xattr unset function timed out after 120 seconds"
           fi
           exit "$status"
