--- a/.github/workflows/139-162-ubuntu-xtrace-xattr-blacklist-gloss.yml
+++ b/.github/workflows/139-162-ubuntu-xtrace-xattr-blacklist-gloss.yml
@@ -1,7 +1,7 @@
-name: 139-158 Ubuntu xtrace xattr package after invoke
+name: 139-162 Ubuntu xtrace xattr blacklist gloss
 
 on:
-  workflow_dispatch:
+  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,8 +11,8 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-xtrace-xattr-package-after-invoke:
-    name: 139-158 Ubuntu xtrace xattr package after invoke
+  ubuntu-xtrace-xattr-blacklist-gloss:
+    name: 139-162 Ubuntu xtrace xattr blacklist gloss
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
@@ -34,6 +34,20 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
+      - name: Patch generate-glosses to blacklist xattr
+        run: |
+          python - <<'PY'
+          from pathlib import Path
+          path = Path('spells/.wizardry/generate-glosses')
+          text = path.read_text()
+          marker = "awk|cat|cp|cut|date|df|diff|dirname|du|echo|egrep|env|expr|fgrep|file|find|grep|head|\\\n"
+          replacement = marker + "xattr|\\\n"
+          if replacement not in text:
+            if marker not in text:
+              raise SystemExit("marker not found for blacklist")
+            text = text.replace(marker, replacement, 1)
+            path.write_text(text)
+          PY
       - name: Run invoke-wizardry then xattr under xtrace
         run: |
           set +e
@@ -42,10 +56,6 @@ jobs:
             timeout 120 bash -lc '
               . spells/.imps/sys/invoke-wizardry
               set -x
-              if ! command -v xattr >/dev/null 2>&1; then
-                printf "%s\n" "xattr command not found" >&2
-                exit 1
-              fi
               tmp=$(mktemp "${TMPDIR:-/tmp}/wizardry-xattr.XXXXXX")
               xattr -w user.test value "$tmp"
               xattr -p user.test "$tmp"
@@ -57,10 +67,6 @@ jobs:
             bash -lc '
               . spells/.imps/sys/invoke-wizardry
               set -x
-              if ! command -v xattr >/dev/null 2>&1; then
-                printf "%s\n" "xattr command not found" >&2
-                exit 1
-              fi
               tmp=$(mktemp "${TMPDIR:-/tmp}/wizardry-xattr.XXXXXX")
               xattr -w user.test value "$tmp"
               xattr -p user.test "$tmp"
@@ -70,10 +76,10 @@ jobs:
             status=$?
           fi
           if [ "$status" -eq 139 ]; then
-            printf '%s\n' "xtrace xattr package after invoke exited with code 139 (SIGSEGV)"
+            printf '%s\n' "xtrace xattr blacklist gloss exited with code 139 (SIGSEGV)"
             printf '%s\n' "Last 50 dmesg lines (if available):"
             dmesg | tail -n 50 || true
           elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "xtrace xattr package after invoke timed out after 120 seconds"
+            printf '%s\n' "xtrace xattr blacklist gloss timed out after 120 seconds"
           fi
           exit "$status"
