--- a/.github/workflows/139-164-ubuntu-xtrace-xattr-gloss-function-only.yml
+++ b/.github/workflows/139-164-ubuntu-xtrace-xattr-gloss-function-only.yml
@@ -1,7 +1,7 @@
-name: 139-158 Ubuntu xtrace xattr package after invoke
+name: 139-164 Ubuntu xtrace xattr gloss function only
 
 on:
-  workflow_dispatch:
+  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,8 +11,8 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-xtrace-xattr-package-after-invoke:
-    name: 139-158 Ubuntu xtrace xattr package after invoke
+  ubuntu-xtrace-xattr-gloss-function-only:
+    name: 139-164 Ubuntu xtrace xattr gloss function only
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
@@ -34,46 +34,40 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run invoke-wizardry then xattr under xtrace
+      - name: Load glosses then run xattr gloss function under xtrace
         run: |
           set +e
           ulimit -c unlimited || true
           if command -v timeout >/dev/null 2>&1; then
             timeout 120 bash -lc '
+              set -e
               . spells/.imps/sys/invoke-wizardry
-              set -x
-              if ! command -v xattr >/dev/null 2>&1; then
-                printf "%s\n" "xattr command not found" >&2
+              if ! type xattr 2>/dev/null | grep -q "function"; then
+                printf "%s\n" "xattr gloss function not found" >&2
                 exit 1
               fi
-              tmp=$(mktemp "${TMPDIR:-/tmp}/wizardry-xattr.XXXXXX")
-              xattr -w user.test value "$tmp"
-              xattr -p user.test "$tmp"
-              xattr -d user.test "$tmp" || :
-              rm -f "$tmp"
+              set -x
+              xattr -w user.test value "$(mktemp)"
             '
             status=$?
           else
             bash -lc '
+              set -e
               . spells/.imps/sys/invoke-wizardry
-              set -x
-              if ! command -v xattr >/dev/null 2>&1; then
-                printf "%s\n" "xattr command not found" >&2
+              if ! type xattr 2>/dev/null | grep -q "function"; then
+                printf "%s\n" "xattr gloss function not found" >&2
                 exit 1
               fi
-              tmp=$(mktemp "${TMPDIR:-/tmp}/wizardry-xattr.XXXXXX")
-              xattr -w user.test value "$tmp"
-              xattr -p user.test "$tmp"
-              xattr -d user.test "$tmp" || :
-              rm -f "$tmp"
+              set -x
+              xattr -w user.test value "$(mktemp)"
             '
             status=$?
           fi
           if [ "$status" -eq 139 ]; then
-            printf '%s\n' "xtrace xattr package after invoke exited with code 139 (SIGSEGV)"
+            printf '%s\n' "xtrace xattr gloss function only exited with code 139 (SIGSEGV)"
             printf '%s\n' "Last 50 dmesg lines (if available):"
             dmesg | tail -n 50 || true
           elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "xtrace xattr package after invoke timed out after 120 seconds"
+            printf '%s\n' "xtrace xattr gloss function only timed out after 120 seconds"
           fi
           exit "$status"
