--- a/.github/workflows/139-186-ubuntu-parse-gloss-xattr.yml
+++ b/.github/workflows/139-186-ubuntu-parse-gloss-xattr.yml
@@ -1,9 +1,7 @@
 name: 139-186 Ubuntu parse gloss xattr
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
