--- a/.github/workflows/139-187-ubuntu-parse-banish-help.yml
+++ b/.github/workflows/139-187-ubuntu-parse-banish-help.yml
@@ -1,9 +1,7 @@
 name: 139-187 Ubuntu parse banish help
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
