--- a/.github/workflows/139-67-ubuntu-gloss-per-gloss.yml
+++ b/.github/workflows/139-67-ubuntu-gloss-per-gloss.yml
@@ -66,11 +66,62 @@ jobs:
                 printf "%s\n" "[gloss-test] missing block $i"
                 exit 1
               fi
-              printf "%s\n" "[gloss-test] sourcing block $i"
+              printf "%s\n" "[gloss-test] sourcing block $i ($block)"
+              if [ "$i" -eq 36 ]; then
+                printf "%s\n" "[gloss-test] block 36 preview"
+                sed -n '1,160p' "$block"
+              fi
               . "$block"
               banish 8 --only --no-tests --no-heal
               i=$((i + 1))
             done
+          )
+          status=$?
+          if [ "$status" -eq 139 ]; then
+            printf '%s\n' "subshell banish exited with code 139 (SIGSEGV)"
+            printf '%s\n' "Last 50 dmesg lines (if available):"
+            dmesg | tail -n 50 || true
+          fi
+          exit "$status"
+
+  ubuntu-gloss-block-36:
+    name: 139-193 Ubuntu gloss block 36 isolate
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Source block 36 and run banish
+        run: |
+          set +e
+          ulimit -c unlimited || true
+          (
+            set -e
+            . spells/.imps/sys/invoke-wizardry
+            gloss_dir=$(mktemp -d /tmp/wizardry-gloss-blocks.XXXXXX)
+            gloss_file=$(mktemp /tmp/wizardry-gloss.XXXXXX)
+            generate-glosses --output "$gloss_file"
+
+            awk_program=$(printf '%s\n' \
+              'BEGIN { idx=0; out="" }' \
+              '/^# First-word gloss/ {' \
+              '  idx++' \
+              '  out=sprintf("%s/block-%03d.sh", outdir, idx)' \
+              '  print "# block " idx > out' \
+              '}' \
+              '{ if (out != "") print >> out }' \
+              'END { printf "%d\n", idx > outdir "/count" }')
+            awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
+
+            block="$gloss_dir/block-036.sh"
+            if [ ! -s "$block" ]; then
+              printf "%s\n" "[gloss-test] missing block 36"
+              exit 1
+            fi
+            printf "%s\n" "[gloss-test] block 36 preview"
+            sed -n '1,200p' "$block"
+            set -x
+            . "$block"
+            banish 8 --only --no-tests --no-heal
           )
           status=$?
           if [ "$status" -eq 139 ]; then
